--- a/maquette_finale2.html
+++ b/maquette_finale2.html
@@ -18,9 +18,6 @@
                 </svg>
 </div>
 <div class="menu">
-            <style type="text/css"> 
-                a:link { text-decoration:none; } 
-                </style>
             <div class="link1 heb">
                 <a href="#ancre1" style="color: #0065fc"> Hébergements</a>
             </div>           
@@ -136,9 +133,10 @@
 <div class="corps">
 <div class="box1 order1">
 
+   
         <div class="txtbox">   
-            <balise id="ancre1">     
-        <h1>Hébergements à Marseille</h1></balise> 
+                
+            <balise id="ancre1"> <h1>Hébergements à Marseille</h1></balise> 
     
         </div> 
 <div class="cadre1"> 
@@ -150,7 +148,7 @@
                 <p><strong>Auberge La Cannebiere</strong> <br />
                  Nuit à partir de 25€</p> <br />
                  <div class="star"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-                </div> </a>
+                </div> 
             </div>                
 </div>  
 <div class="cadre1"> 
