--- a/maquette_finale1.html
+++ b/maquette_finale1.html
@@ -3,7 +3,7 @@
 <head>
     <title>Reservia</title>
     <meta charset="utf-8" /> 
-    <link rel="stylesheet" href="style-maquette_finale1.css" />
+    <link rel="stylesheet" href="style_maquette_finale1.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Rechercher votre hergement pour des vacances de rêve" />
     <script src="https://kit.fontawesome.com/0d5be596d9.js" crossorigin="anonymous"></script>
