--- a/site.reservia.html
+++ b/site.reservia.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Rechercher votre hergement pour des vacances de rêve" />
     <script src="https://kit.fontawesome.com/0d5be596d9.js"crossorigin="anonymous"></script>
-    <script src="ReserviA" crossorigin="anonymous"></script>
+    <script src="Reservia" crossorigin="anonymous"></script>
 </head>
 <body>
                                     <!-- header -->
