--- a/www/index.html
+++ b/www/index.html
@@ -21,13 +21,13 @@
             </div>
 <div class="menu">
             <div class="link1 heb">
-                <a href="#ancre1" style="color: #0065fc"> Hébergements</a>
+                <a href="#ancre1" >Hébergements</a>
             </div>           
             <div class="link1 act">
-                <a href="#ancre2" style="color: black">Activités</a>
+                <a href="#ancre2" >Activités</a>
             </div>  
             <div class="link1 ins">
-                <a href="#" style="color: #0065fc">S'inscrire</a>  
+                <a href="#" ></a>S'inscrire</a>  
             </div> 
 </div>        
 </header>
@@ -137,7 +137,7 @@
         <div class="txtbox txt1">          
             <div id="ancre1"> <h1>Hébergements à Marseille</h1></div> 
         </div> 
-    <div class="cadre1"> 
+    <div  class="cadre1" ><a href="#">
         <div class="cd1_img1">                    
             <img src="images/hebergements/4_small/canebiere.jpg" alt="Auberge La Cannebiere">
         </div> 
@@ -147,8 +147,8 @@
                  <div class="star cd1"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                 </div> 
             </div>                
-    </div>  
-    <div class="cadre1"> 
+        </a></div>  
+    <div class="cadre1"><a href="#">
         <div class="cd1_img2">                      
           <img src="images/hebergements/4_small/port.jpg" alt="Hotel du port"> 
         </div>
@@ -159,8 +159,8 @@
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </div>          
             </div> 
-    </div>   
-    <div class="cadre1"> 
+        </a></div>    
+    <div class="cadre1"><a href="#">
         <div class="cd1_img3">                     
     <img src="images/hebergements/4_small/mouettes.jpg" alt="Hotel Les mouettes"> 
         </div>
@@ -171,8 +171,8 @@
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
     </div>      
             </div>
-    </div>   
-    <div class="cadre1"> 
+        </a></div>   
+    <div class="cadre1"><a href="#">
         <div class="cd1_img4">                      
     <img src="images/hebergements/4_small/mer.jpg" alt="Hotel de la mer"> 
         </div>
@@ -186,8 +186,8 @@
     </div> 
 
             </div>
-    </div>   
-    <div class="cadre1"> 
+        </a></div>    
+    <div class="cadre1"> <a href="#">
         <div class="cd1_img5">                      
     <img src="images/hebergements/4_small/panier.jpg" alt="Auberge Le Panier">
         </div> 
@@ -198,8 +198,8 @@
         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
     </div>     
             </div>
-    </div>   
-    <div class="cadre1"> 
+        </a> </div>  
+    <div class="cadre1"><a href="#">
         <div class="cd1_img6">                      
     <img src="images/hebergements/4_small/amina.jpg" alt="Hotel chez amina"> 
         </div>
@@ -211,7 +211,7 @@
         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
         </div> 
             </div> 
-    </div>
+        </a> </div>
     <div class="txtbox1fin">           
         <h2>Afficher plus</h2>
     </div> 
@@ -220,10 +220,10 @@
         <div class="txtbox txt2">
             <h1>Les plus populaires</h1><i class="fas fa-chart-line"></i>
         </div>
-        <div class="cadre2">               
+        <div class="cadre2"> <a href="#">           
             <div class="cd2_img1">
             <img src="images/hebergements/4_small/matin.jpg" alt="hotel Le soleil du matin"> 
-            </div>
+            </div></a> 
         <div class="txtcadre2">
                 <p><strong>Hôtel Le soleil du matin<br /></strong> 
                  Nuit à partir de 128€</p> 
@@ -231,11 +231,11 @@
                     <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </div> 
         </div>
-        </div>      
-        <div class="cadre2">               
+        </div>       
+        <div class="cadre2"><a href="#">              
             <div class="cd2_img2">
             <img src="images/hebergements/4_small/eau.jpg" alt="Au coeur de l'eau, chambre d'hotes"> 
-            </div>
+            </div></a>
         <div class="txtcadre2">
             <p><strong>Au coeur de l'eau, chambre d'hôtes<br /></strong> 
             Nuit à partir de 71€</p> 
@@ -244,9 +244,9 @@
         </div> 
     
         </div>
-        </div>      
-        <div class="cadre2">               
-<div class="cd2_img3">
+        </div>     
+        <div class="cadre2"><a href="#">             
+<div class="cd2_img3"></a> 
 <img src="images/hebergements/4_small/blanc.jpg" alt="Hotel tout bleu et blanc"> 
 </div>
 <div class="txtcadre2">
@@ -267,48 +267,48 @@
             <h1>Activités à Marseille</h1></div>
     </div>
     <div class="cadrebox3_1">
-        <div class="cadre3">                      
+        <div class="cadre3"><a href="#">                     
             <img src="images/activites/4_small/port.jpg"  alt="Vieux Port">  
         <div class="txtcadre3">           
                 <p><strong>Vieux Port<br /></strong>                          
             </div>        
-        </div>
+        </a></div> 
     </div>
     <div class="cadrebox3_2">
-        <div class="cadre3_2">                         
+        <div class="cadre3_2"><a href="#">                         
             <img src="images/activites/4_small/pomegues.jpg"  alt="Fort de Pomegues">    
         <div class="txtcadre3">     
             <p><strong>Fort de Pomègues<br /></strong>               
         </div>
-        </div>
-        <div class="cadre3_2">                      
+    </a></div>
+        <div class="cadre3_2"><a href="#">                     
             <img src="images/activites/4_small/friout.jpg"  alt="iles du Friout">   
         <div class="txtcadre3">   
             <p><strong>îles du Friout<br /></strong>                  
         </div>
-    </div>
+    </a> </div>
     </div>
     <div class="cadrebox3_1">
-        <div class="cadre3">                 
+        <div class="cadre3"><a href="#">               
             <img src="images/activites/4_small/national.jpg"  alt="Parc national des Calanques"> 
         <div class="txtcadre3">
             <p><strong>Parc national des Calanques<br /></strong>   
         </div>
-        </div>
+    </a> </div>
     </div>
     <div class="cadrebox3_2">
-        <div class="cadre3_2">                   
+        <div class="cadre3_2"><a href="#">                   
             <img src="images/activites/4_small/dame.jpg" alt="Notre-Dame-de-la-Garde"> 
         <div class="txtcadre3">
             <p><strong>Notre-Dame-de-la-Garde<br /></strong>      
         </div>
-</div>
-        <div class="cadre3_2">               
+    </a></div>
+        <div class="cadre3_2"><a href="#">               
             <img src="images/activites/4_small/longchamp.jpg" alt="Parc Longchamp"> 
         <div class="txtcadre3">
             <p><strong>Parc Longchamp<br /></strong> 
         </div>     
-        </div>
+    </a></div>
     </div>   
 </div>
 </div> 
