modification sur le HTML aprés le passage au Validator W3, pour le css c ok

--- a/site_reservia.html
+++ b/site_reservia.html
@@ -27,7 +27,7 @@
                 <a href="#ancre2" >Activités</a>
             </div>  
             <div class="link1 ins">
-                <a href="#" ></a>S'inscrire</a>  
+                <a href="#" >S'inscrire</a>  
             </div> 
 </div>        
 </header>
@@ -246,9 +246,9 @@
         </div>
         </div>     
         <div class="cadre2"><a href="#">             
-<div class="cd2_img3"></a> 
+<div class="cd2_img3">
 <img src="images/hebergements/4_small/blanc.jpg" alt="Hotel tout bleu et blanc"> 
-</div>
+</div></a> 
 <div class="txtcadre2">
 
     <p><strong>Hôtel tout bleu et blanc<br /></strong> 
